Migrated to SequencedCollection.