@@ -53,17 +53,17 @@ class DiskGeneratorTest {
         List<Vector2D> support = Arrays.asList(new Vector2D(1, 2));
         EnclosingBall<Euclidean2D, Vector2D> disk = new DiskGenerator().ballOnSupport(support);
         assertEquals(0.0, disk.getRadius(), 1.0e-10);
-        assertTrue(disk.contains(support.get(0)));
-        assertTrue(disk.contains(support.get(0), 0.5));
-        assertFalse(disk.contains(new Vector2D(support.get(0).getX() + 0.1,
-                                                      support.get(0).getY() - 0.1),
+        assertTrue(disk.contains(support.getFirst()));
+        assertTrue(disk.contains(support.getFirst(), 0.5));
+        assertFalse(disk.contains(new Vector2D(support.getFirst().getX() + 0.1,
+                                                      support.getFirst().getY() - 0.1),
                                          0.001));
-        assertTrue(disk.contains(new Vector2D(support.get(0).getX() + 0.1,
-                                                     support.get(0).getY() - 0.1),
+        assertTrue(disk.contains(new Vector2D(support.getFirst().getX() + 0.1,
+                                                     support.getFirst().getY() - 0.1),
                                         0.5));
-        assertEquals(0, support.get(0).distance(disk.getCenter()), 1.0e-10);
+        assertEquals(0, support.getFirst().distance(disk.getCenter()), 1.0e-10);
         assertEquals(1, disk.getSupportSize());
-        assertSame(support.get(0), disk.getSupport()[0]);
+        assertSame(support.getFirst(), disk.getSupport()[0]);
     }
 
     @Test
